@@ -6,5 +6,6 @@ namespace scripting
 	{
 		inline constexpr const char* SCRIPT_INSTANCE = "SCRIPT_INSTANCE";
 		inline constexpr const char* RESOURCE_NAME = "RSRC_NAME";
+		inline constexpr const char* THIS_RESOURCE = "THIS_RSRC";
 	}
 }
